# Geospatial-Property-Climate-Risk-Analyzer

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
notebooks/: eda.ipynb
src/: __init__.py  config.py
src/dashboard/: __init__.py  app.py  map_layer.py
src/model/: __init__.py  evaluate.py  predict.py  train.py
src/narratives/: __init__.py  claude_narrator.py
src/pipeline/: __init__.py  features.py  h3_encoder.py  ingest.py
tests/: test_model.py  test_narratives.py  test_pipeline.py
